overflow fix

--- a/desktop/src/app/components/information-panel/information-panel.component.scss
+++ b/desktop/src/app/components/information-panel/information-panel.component.scss
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css?family=Proxima+Nova');
 
 mat-card {
-    width: 100%;
+    width: 125%;
     padding: 32px;
     height: fit-content;
     display: flex;
@@ -194,7 +194,6 @@ td {
 }
 
 .message-container {
-
 }
 
 .panel-top {
